[package]
name = "tagger"
version = "0.1.0"
authors = ["Mika Attila <radiantstatue@gmail.com>"]

[features]
random = ["rand"]
gui = ["sfml"]
default = ["random", "gui"]

[dependencies]
tagmap = { path = "/home/snake/projects/github/crumblingstatue/tagmap" }
clap = "2.4.3"
rustyline = "1"
rand = { version = "0.3.14", optional = true }
sfml = { version = "0.14.0", optional = true }
image = "0.17.0"
